# Guidee

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: hotkeys.rs  lib.rs  main.rs  tray.rs
apps/desktop/src-tauri/src/commands/: audio.rs  mod.rs  overlay.rs  screen.rs
docs/: agent-design.md  architecture.md  privacy.md
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  railway.toml
infra/supabase/migrations/: 001_initial.sql
services/agents/: .env.example  config.py  llm.py  requirements.txt  state.py  supervisor.py  worker.py
services/agents/graphs/: browser_graph.py  email_agent.py  file_agent.py  research_agent.py
services/agents/nodes/: __init__.py  action_agent.py  dom_agent.py  executor.py  instruction_agent.py  planner.py  research.py  router.py  summarizer.py  vision_agent.py
services/agents/tests/: test_browser_agent.py  test_email_agent.py  test_filesystem.py  test_research.py  test_router.py  test_runtime.py
services/agents/tools/: __init__.py  browser.py  code_exec.py  email.py  filesystem.py  web_search.py
services/api/: .env.example  requirements.txt
services/api/app/: __init__.py  main.py
services/api/tests/: test_api_completion.py  (+3 more)
(+29 files in other folders)
