[package]
name = "guidee-desktop"
version = "0.1.0"
description = "Guidee desktop AI assistant"
authors = ["Guidee"]
edition = "2021"

[lib]
name = "guidee_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
xcap = "0.0.14"
cpal = "0.15"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
